<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sales</string>
    <string name="send_sale_data">Send Sale Data</string>
    <string name="check_now">Check Current Data</string>
    <string name="check_history">Check history Data</string>
    <string name="about">Settings</string>
    <string name="production_desc">production_desc</string>
    <string name="accounts">Get Commission</string>
    <string name="img_desc">Rifle components</string>
    <string name="count_add"> ↑ </string>
    <string name="count_sub"> ↓ </string>
    <string name="default_count">1</string>
    <string name="send_to_server">Send Sale Data</string>
    <string name="uname">username</string>
    <string name="upwd">password</string>
    <string name="login_text">Login</string>
    <string name="rights_text">All Rights Reserved ©zouliping</string>
    <string name="location">Location</string>
    <string name="logout">Logout</string>
    <string name="danger">Danger Zone</string>
    <string name="lock">Lock is the part that hits the primer or firing pin or explodes the percussion cap and causes the gun to fire.</string>
    <string name="stock">Stock is a component of the general rifle whose benefits cannot be overestimated.</string>
    <string name="barrel">Barrel is one of the main component parts of firearms and usually made of heat-resisting, uneasily-deformed metal tube.</string>

</resources>